# grounded

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: DATA.md
src/grounded/data/: ego_dataset.py  visualize.py  visualize_3d.py
